--- a/templates/base.html
+++ b/templates/base.html
@@ -247,8 +247,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" onerror="console.warn('Bootstrap JS failed to load from CDN')"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.2/socket.io.js" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/csrf-handler.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/websocket-client-factory.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/websocket-client.js') }}"></script>
+    <!-- WebSocket Transport Optimizer -->
+    <script src="{{ url_for('static', filename='js/websocket-transport-optimizer.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/websocket-bundle.js') }}"></script>
     
     <!-- Unified Notification System Scripts -->
     <script src="{{ url_for('static', filename='js/notification-ui-renderer.js') }}"></script>
