--- a/templates/gdpr/data_rectification.html
+++ b/templates/gdpr/data_rectification.html
@@ -113,7 +113,7 @@
                         </div>
 
                         <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                            <a href="{{ url_for('profile.profile') }}" class="btn btn-secondary me-md-2">Cancel</a>
+                            <a href="{{ url_for('user_management.profile') }}" class="btn btn-secondary me-md-2">Cancel</a>
                             {{ form.submit(class="btn btn-primary") }}
                         </div>
                     </form>
