--- a/templates/user_management/profile.html
+++ b/templates/user_management/profile.html
@@ -17,7 +17,7 @@
                         <i class="fas fa-user"></i> User Profile
                     </h4>
                     <div class="btn-group" role="group">
-                        <a href="{{ url_for('user_management.edit_profile') }}" class="btn btn-primary btn-sm">
+                        <a href="{{ url_for('user_management.profile') }}" class="btn btn-primary btn-sm">
                             <i class="fas fa-edit"></i> Edit Profile
                         </a>
                         <a href="{{ url_for('user_management.change_password') }}" class="btn btn-secondary btn-sm">
