post websocket consolidation, pre notification consolidation

--- a/templates/base.html
+++ b/templates/base.html
@@ -252,10 +252,9 @@
     <script src="{{ url_for('static', filename='js/websocket-bundle.js') }}"></script>
     
     <!-- Unified Notification System Scripts -->
+    <!-- Unified Notification System -->
     <script src="{{ url_for('static', filename='js/notification-ui-renderer.js') }}"></script>
     <script src="{{ url_for('static', filename='js/page_notification_integrator.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/notification-integration.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/legacy-notification-migration.js') }}"></script>
     
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
     <script src="{{ url_for('static', filename='js/error_handler.js') }}"></script>
